fix: restyle broken style

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 100px;
+  width: 100%;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .section-title {
